src/objects/saReportDetail__c.object
<CustomObject>
    <description>Details of a saReport</description>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ConcernedReport__c</fullName>
        <label>ConcernedReport</label>
        <referenceTo>saReport__c</referenceTo>
        <relationshipLabel>saReportDetail</relationshipLabel>
        <relationshipName>saReportDetail</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>CreatedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CreatedBy</label>
        <referenceTo>User</referenceTo>
        <relationshipName>saReportDetail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <label>CreatedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>LIKE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VERY_LIKE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COPY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COMMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>READ</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>saReportDetail</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SA_Detail-{00000000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>